refactor(clutches): games-common adoptieren, ungenutzten Code entfernen
- PlayerUtils delegiert sendBar/sendTitle an games-common PlayerMessages;
  ungenutzte Methoden (checkInventorySize, getLastKey) entfernt, convertTime bleibt lokal
- Ungenutztes playerUtils-Feld aus der Hauptklasse entfernt
- Listener-Scan: deprecated Class.newInstance ersetzt, Fehler werden mit Kontext geloggt
- PrivateWorld: while-mit-break durch if ersetzt (identische Semantik)
- PlayerEntry (801 Zeilen) bewusst nicht zerlegt: die Settings-UI-Methoden mutieren
  private Felder direkt — keine verhaltenssichere Trennlinie